feat: add contacts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="cv-wrapper">
     <main class="main">
-      <article class="article my-name">  
+      <article class="article my-name">  <!-- my-name -->
         <div class="my-name__avatar">
         </div>
         <div class="my-name__name">
@@ -19,7 +19,21 @@
           <p class="position">Frond-end Developer</p>
         </div>
       </article>
-      
+      <article class="article contacts">   <!-- contacts -->
+        <h2 class="h2-title">How to reach me:</h2>
+
+          <p class="contacts__item_bold">Mobile</p>
+          <p class="contacts__item">+375-29-59-64-187</p>
+
+          <p class="contacts__item_bold">Viber</p>
+          <p class="contacts__item">+375-29-59-64-187</p>
+
+          <p class="contacts__item_bold">WhatsApp</p>
+          <p class="contacts__item">+7-902-944-26-29</p>
+
+          <p class="contacts__item_bold">Email</p>
+          <p class="contacts__item">bareum.dev@gmail.com</p>
+      </article>
     </main>
     <footer class="footer">
 
