--- a/index.html
+++ b/index.html
@@ -34,9 +34,28 @@
           <p class="contacts__item_bold">Email</p>
           <p class="contacts__item">bareum.dev@gmail.com</p>
       </article>
+      <article class="article about-me">   <!-- about me -->
+        <h2 class="h2-title">Profile</h2>
+        <p>I'm beginner Front-End developer. Now I'm studing JavaScript and working on my english.</p>
+      </article>
+      <article class="article skills">   <!-- skills -->
+        <h2 class="h2-title">Skills</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Basic JavaScript</li>
+          <li>Git</li>
+          <li>BEM</li>
+        </ul>
+      </article>
+      <article class="article education">   <!-- education -->
+        <h2 class="h2-title">Education</h2>
+        <p>Moscow Institute of Enterpreneurship and Law (MIPP) - B.A Economics
+2007-2012</p>
+      </article>
     </main>
     <footer class="footer">
-
+      <hr>
     </footer>
   </div>
   
