feat: add language and sample code

--- a/index.html
+++ b/index.html
@@ -53,9 +53,20 @@
         <p>Moscow Institute of Enterpreneurship and Law (MIPP) - B.A Economics
 2007-2012</p>
       </article>
+      <article class="article language">   <!-- language -->
+        <h2 class="h2-title">Language</h2>
+        <p>English - A2</p>
+      </article>
+      <article class="article sample-code">   <!-- sample-code -->
+        <h2 class="h2-title">Sample code</h2>
+        <pre>
+<code>let age = prompt('Age', '');
+if (age &gt;= 14 && age &lt;= 90) {
+  alert('Ok');
+} else alert('=((')</code></pre>
+      </article>
     </main>
-    <footer class="footer">
-      <hr>
+    <footer class="footer">   <!-- FOOTER -->
     </footer>
   </div>
   
