feat: add footer

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@ if (age &gt;= 14 && age &lt;= 90) {
       </article>
     </main>
     <footer class="footer">   <!-- FOOTER -->
+      <div class="footer-wrapper">
+        <a class="h2-title footer__git-link" href="https://github.com/bareum-dev" target="_blank" title="My GitHub">GitHub</a>
+        <p>2021</p>
+        <a class="footer__rs-link" href="https://rs.school/js/" target="_blank" title="Course information">
+          <img class="rs-link" src="./logo.svg" alt="Link to course">
+        </a>
+      </div>
     </footer>
   </div>
   
